--- a/css/styles.css
+++ b/css/styles.css
@@ -31,11 +31,17 @@ h1, h2 {
 #canvas {
 }
 
-#picture {
+#picture, #spinner {
     display: block;
     margin: 0px auto 15px auto;
     max-height: 475px;
     max-width: 800px;
+    -webkit-animation-duration: 0.15s;
+    -moz-animation-duration: 0.15s;    
+}
+
+#spinner {
+    margin-top: 140px;
 }
 
 #description, #hint-text {
