--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,15 @@ html, body {
     font-family: "Arial", sans-serif;
 }
 
+a:link, a:visited, a:hover, a:active {
+    color: #9AB6FF;
+    text-decoration: none;    
+}
+
+a:hover {
+    color: #577AD5;
+}
+
 h1 {
     font-size: 24px;
 }
@@ -14,6 +23,10 @@ h2 {
 
 h1, h2 {
     margin: 0px;
+}
+
+ul {
+    margin-top: 10px;
 }
 
 #header {
